# SOPES1_PROYECTO1_2S2021

./: .gitignore  README.md
APIs_Replicas/: docker-compose.yml
APIs_Replicas/Go/: dockerfile  go.mod  go.sum  main.go  subir.sh  test.sh
APIs_Replicas/Python/: api.py  dockerfile  requirements.txt
APIs_Replicas/Rust/api/: .env  Cargo.toml  dockerfile  prueba.sh  test.sh
APIs_Replicas/Rust/api/src/: GCPKey.json  bin.rs
APIs_Replicas/Rust/api/src/db/: mod.rs
APIs_Replicas/Rust/api/src/model/: mod.rs
APIs_Replicas/Rust/api/test/: cargar.sh  subir.sh  tweets.sh  vaciar.sh
KernelModules/: librerias_necesarias.txt
KernelModules/API/: index.js
KernelModules/cpu/: Makefile  cpu.c
KernelModules/ram/: Makefile  ram.c
Load_Testers/: data.json
Load_Testers/Go/: main.go
Load_Testers/Locust/: traffic.py
Load_Testers/Python/: tester.py
Monitoreo/: docker-compose.yml
Monitoreo/grafana/provisioning/datasources/: datasource.yml
Monitoreo/node-application-monitoring-app/: gauge.js  index.js  package-lock.json
Monitoreo/prometheus/: prometheus.yml
WebApp/AppEngine/: endPoints.js  index.js  package-lock.json  package.json
WebApp/ReactApp/: .dockerignore  dockerfile  dockerfile.prod  package-lock.json  package.json
WebApp/ReactApp/src/: App.js  globalContext.js  home.js  navBar.js  notification.js  pubsub.js  reports.js  tweet.js
